
* remove ID in database tables
* add a thread to handle plots

  
### To fix list: ###

* nothing.


### October 2 2021, Release version 0.7.1 ###

  * FIXED:
    * the gui path was missing in the connexion window.
    * icons indicating forecast and time series pages were not loaded correctly.
    * name 'time' has been replaced by 't' for a variable to avoid conflict with time module.


### September 26 2021, Release version 0.7.0 ###

  * FIXED:
    * an issue was fixed in the sensor reading thread about calibration parameters.
    * fixed plot limits when data for time series are NaN.
    * fixed plots not refreshing when the TS button is clicked.
    * fixed missing parameters for computation of calibration in sensors reading.

  * ADDED:
    * new log messages have been added.
    * a new weather icon has been added.
    * a new window has been added to ask the user if he wants to retry a new connexion to internet in case of no
    connexion detection.
    * a spinner has been added when heavy time series are ploted.

  * MODIFIED:
    * database has been modified to allow NULL data.
    * update process is now working as it should and has been frozen.
    * the display of T, P, H, min and max has been improved. If data are too old, they are not displayed.
    * internet connection is tested before sending MF and GH requests.
    * when built as a stand alone application and integrated in LXDE autostart, all graphical materials couldn't be
    found during boot. GUI path has been integrated in all windows and GUI functions to allow proper operations in that
    particular case.


### September 20 2021, Release version 0.6.0 ###

  * MODIFIED:
    * the project has been pushed on GitHub (private)

  * ADDED:
    * a first version of a thread to check version online has been added.
    * first versions of all functions to handle update processes.
    * functions have been added to handle errors in threads.